*******************************************************************************
2.0.20.alpha.5 release for ACL on Windows
*******************************************************************************

Thu Oct  3 00:13:21 1996  Kevin Layer  <layer@freezer>

	* clman.data added to repository
	* manual/OBLIST.el added to repository
	* clman.h: include netinet/in.h for htonl() macro
	* makeman.c: convert to network byte order
 	* fi-clman.el: make more friendly in the face of no manual/
	directory.
	
*******************************************************************************
2.0.20 alpha.4 release for ACL on Windows
*******************************************************************************

Thu Sep 26 12:26:01 1996  Kevin Layer  <layer@freezer>

	* fi-clman.el: fix the way various things are found (ie, don't use
	load-path use the directory in which fi-clman lives in).
	* fi-site-init.el: don't autoload fi-clman, since that can't use
	load-path anymore

*******************************************************************************
2.0.20 alpha.3 release for ACL on Windows
*******************************************************************************

Mon Sep 23 11:12:43 1996  Kevin Layer  <layer@freezer>

	* fi-subproc.el: on windows pass environment in
	fi:subprocess-env-vars to lisp subprocess; don't restrict
	fi:common-lisp-image-name to be a cons on windows.

*******************************************************************************
2.0.20 alpha.2 release for ACL on Windows
*******************************************************************************

Tue Sep 17 11:00:41 1996    <layer@HOBART>

	* fi-site-init.el: incf version number

Thu Sep  5 16:15:57 1996  Kevin Layer  <layer@freezer>

	* fi-site-init.el: fix fi::load

Wed Sep 04 11:42:45 1996    <layer@HOBART>

	* fi-shell.el: make sure we run the correct shell on NT

	* fi-keys.el: make sure newline in shell mode (DOS) does the right
	  thing (for emacs 19.34)